--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -78,6 +78,30 @@
         position: absolute !important;
     }
 
+    #charmander {
+        height: 115px;
+        top: 121px;
+        left: 40px;
+    }
+
+    #charmanderInfo {
+        height: 45px;
+        top: 187px;
+        right: 10px;
+    }
+
+    #pikachu {
+        height: 115px;
+        top: 40px;
+        right: 40px;
+    }
+
+    #pikachuInfo {
+        height: 45px;
+        top: 10px;
+        left: 10px;
+    }
+
 	/*---- Theme Classes ----*/
 	
 	.absolute {
