--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,7 @@
         width: 100%;
         height: 100%;
 		font-family: Roboto;
+        font-size: 15px;
 		-webkit-user-select: none;      
 		-moz-user-select: none;
 		-ms-user-select: none;
@@ -100,6 +101,34 @@
         height: 45px;
         top: 10px;
         left: 10px;
+    }
+
+    #userName {
+        width: 83px;
+        top: 190px;
+        right: 58px;
+        z-index: 1;
+    }
+
+    #userLvl {
+        top: 195px;
+        right: 15px;
+        font-size: 12px;
+        z-index: 1;
+    }
+
+    #cpuName {
+        width: 83px;
+        top: 15px;
+        left: 16px;
+        z-index: 1;
+    }
+
+    #cpuLvl {
+        top: 19px;
+        left: 110px;
+        font-size: 12px;
+        z-index: 1;
     }
 
 	/*---- Theme Classes ----*/
