--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -131,6 +131,38 @@
         z-index: 1;
     }
 
+    #userHealthBarHolder {
+        width: 71px;
+        top: 216px;
+        left: 277px;
+    }
+
+    #userHealthBar {
+        width: 100%;
+        height: 3px;
+        background-color: #00B200;
+        z-index: 1;
+    }
+
+    #cpuHealthBarHolder {
+        width: 71px;
+        top: 39px;
+        left: 72px;
+    }
+
+    #cpuHealthBar {
+        width: 100%;
+        height: 3px;
+        background-color: #00B200;
+        z-index: 1;
+    }
+
+    #chatText {
+        width: 338px;
+        top: 263px;
+        left: 22px;
+    }
+
 	/*---- Theme Classes ----*/
 	
 	.absolute {
