added prepare to attack function, cpu jumps to indicate it's turn

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -91,7 +91,7 @@
         right: 10px;
     }
 
-    #pikachu {
+    #pikachuImage {
         height: 115px;
         top: 40px;
         right: 40px;
