--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -163,6 +163,20 @@
         left: 22px;
     }
 
+    .userAttackImage {
+        width: 100px;
+        top: 95px;
+        right: 57px;
+        z-index: 1;
+    }
+
+    .cpuAttackImage {
+        width: 100px;
+        top: 185px;
+        left: 60px;
+        z-index: 1;
+    }
+
 	/*---- Theme Classes ----*/
 	
 	.absolute {
